bdr.BDR2.scala.code
var message:String=a

while(estSurMessage()==true){
  message match{
    case "R" => droite();  avance()
    case "L"=> gauche(); avance() 
    case "I"=> gauche(); avance()  
  	case "A"=>avance()
  	case "B"=>avance(); avance() 
    case "C"=>avance(); avance(); avance()
    case "Z"=>recule()
    case "Y"=> recule();recule()
    case "X" => recule(); recule(); recule()
    case "W" => recule();recule(); recule();recule()
    case "V" => recule(); recule(); recule(); recule(); recule()
    case "V" => recule(); recule(); recule(); recule(); recule(); recule()
  }
  
  
  
  
  
  
  
  
}